--- a/tinker/templates/admin/program-search/home.html
+++ b/tinker/templates/admin/program-search/home.html
@@ -259,7 +259,7 @@
                         </label>
                     </div>
                     <div class="modal-footer">
-                        <a class="btn btn-primary" data-dismiss="modal">Create</a>
+                        <button id="program-submit" type="submit" class="btn btn-primary" data-dismiss="modal">Create</button>
                     </div>
                 </div>
             </div>
