updated wording of new email, per Fiona

--- a/tinker/templates/news/article.html
+++ b/tinker/templates/news/article.html
@@ -31,7 +31,7 @@
                 <div style="margin-left: 20px;margin-right: 20px; margin-bottom:20px">
                     <h2 style="text-align:center;font-style: normal;font-weight: normal;font-size: 22px;line-height: 28px;font-family: sans-serif;">About Bethel</h2>
                     <p style="margin-top:10px">
-                        Bethel University is a leader in Christ-centered higher education with more than 5,500 students from 48 states and 42 countries enrolled in undergraduate, graduate, seminary, and adult education programs. Based in St. Paul, Minnesota, with an additional seminary location in San Diego, California, Bethel offers bachelor’s and advanced degrees in nearly 100 fields. Educationally excellent classroom-based and online programs equip graduates to make exceptional contributions in life-long service to God and the world.
+                        Bethel University is a leader in Christ-centered higher education with more than 5,500 students from 48 states and 42 countries enrolled in undergraduate, graduate, seminary, and adult education programs. Based in St. Paul, Minnesota, Bethel offers bachelor’s and advanced degrees in nearly 100 fields. Educationally excellent classroom-based and online programs equip graduates to make exceptional contributions in life-long service to God and the world.
                     </p>
                 </div>
             </td>
