--- a/tinker/templates/e-announcements/form.html
+++ b/tinker/templates/e-announcements/form.html
@@ -209,7 +209,7 @@
                     // Labor Day - first monday in sept
                     else if( date.getMonth() == 8 && date.getDay() == 1 && Math.ceil(date.getDate()/7) == 1 )
                         return true;
-                    // Thanksgiving and Black Friday -- 4th thursday in nov, 4th friday in nov
+                    // Thanksgiving and Black Friday -- 4th thursday in nov, the friday after the 4th thursday in nov
                     else if( date.getMonth() == 10 && (Math.ceil(date.getDate()/7) == 4 && date.getDay() == 4) || (Math.ceil((date.getDate()-1)/7) == 4 && date.getDay() == 5) )
                         return true;
                     // Christmas Eve(observed) - christmas eve is on the weekend, we get the friday off (22nd or 23rd).
